--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -121,6 +121,7 @@
 
     @keyframes an2{
       0%{
+        opacity: 1;
         transform: translateY(-3.5em); 
       }
       25%{
@@ -130,14 +131,15 @@
           transform: translateY(0);
           opacity: 1;
       }
-      72%{
+      71%{
         opacity: 1;
         transform: translateY(3.5em); 
       }
-      73%{
+      71%{
         opacity: 0;
       }
       75%{
+         opacity: 0;
         transform: translateY(-3.5em);
       }
     }
