--- a/src/app/dashboard/components/tools/tools.component.html
+++ b/src/app/dashboard/components/tools/tools.component.html
@@ -17,7 +17,7 @@
     <svg width="17" height="17" viewBox="0 0 17 17" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M8.36396 1.99932L14.7279 8.36328L8.36396 14.7272" stroke="#ffffff" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
     </svg>
-    <div class="tools-label" >{{visibleToolsItems.length}} Tools</div>
+    <div class="tools-label" >{{visibleToolsItems.length}} Tool{{visibleToolsItems.length > 1 ? 's' : ''}}</div>
   </div>
 </div>
 
