--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -97,6 +97,15 @@
       font-size: .8em;
           padding-top: 4px;
     }
+
+    @media(max-width: 768px){
+      .banner-wr{
+        font-size: 12px;
+      }
+      .banner-discription p{
+          padding-top: 0;
+    }
+    }
     @keyframes an1{
       0%{
         transform: translateY(0); 
