--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -175,7 +175,9 @@
             <div class="dropdown currency-pair-info__dropdown">
               <div class="dropdown__btn">BTC</div>
             </div>
-            <div class="currency-pair-info__change-pair"></div>
+            <div class="currency-pair-info__change-pair">
+              <span class="currency-pair-info__change-pair--mob">/</span>
+            </div>
             <div class="dropdown currency-pair-info__dropdown">
               <div class="dropdown__btn">USD</div>
             </div>
