--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -431,3 +431,11 @@
 }
 
 /*--- DARK THEME END---*/
+.trading-wr--mobile{
+ padding: 0 10px 0 13px;
+ .wrap-input__input{
+  height: 33px;
+  
+}
+
+}
