--- a/src/app/dashboard/components/trading/trading.component.html
+++ b/src/app/dashboard/components/trading/trading.component.html
@@ -165,8 +165,7 @@
   </div>
 
 
-
-
+<!-- trading mobile start -->
   <div class="widget__content widget__content--mob">
     <div class="trading-header-wr">
       <div class="currency-pair-info--mob">
@@ -336,9 +335,10 @@
       </form>
 
     </div>
+    
       </div>
       
-
+<!-- trading mobile end -->
   </div>
   <!--notif success start-->
   <div class="trading-notification trading-notification--success" *ngIf="notifySuccess">
