--- a/src/app/static-pages/contacts/contacts.component.scss
+++ b/src/app/static-pages/contacts/contacts.component.scss
@@ -8,3 +8,27 @@
 		text-transform: lowercase;
 	}
 }
+
+.error-wrapper {
+  min-height: 25px;
+}
+
+.wrap-input--error {
+  input, textarea {
+    border-color: #EB5757 !important;
+  }
+  label{
+    color: #EB5757 !important;
+  }
+}
+
+.popup__wrap-input, .contacts__wrap-textarea {
+  margin-bottom: 3px !important;
+}
+
+.btn--empty-blue:hover {
+  color: #94C2FF !important;
+  border-color: #94C2FF !important;
+  background: transparent;
+  cursor: default;
+}
