--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -89,7 +89,7 @@
           {{'Volume' | translate}}
         </div>
       </div>
-      <div class="markets__tbody">
+      <div class="markets__tbody" id="markets-container" (click)="onClickMarketItem($event)">
         <perfect-scrollbar style="max-height: 353px;">
           <div style="margin-right: 24px;">
             <!--Preferred Currency Pairs-->
@@ -128,12 +128,10 @@
             <!--Preferred Currency Pairs-->
 
               <app-markets-item
-                *ngFor="let pair of pairs | currencySort :'volume'"
+                *ngFor="let pair of (pairs | currencySort :'volume'); trackBy: trackByFn"
                 [pair]="pair"
                 [isFiat]="isFiat"
                 [currentCurrencyPair]="currentCurrencyPair"
-                (toggleFavorite)="toggleFavorite($event)"
-                (onSelectCurrencyPair)="onSelectCurrencyPair($event)"
               >
               </app-markets-item>
           </div>
