fix graph mobile + chat mobile

--- a/src/app/dashboard/components/chat/chat.component.html
+++ b/src/app/dashboard/components/chat/chat.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
   <div class="widget__header--mob">
-    <div class="widget__name-mob">Chat</div>
+    <!-- <div class="widget__name-mob">Chat</div> -->
   </div>
   <div class="widget__content widget__content--show-all" [ngStyle]="scrollStyles">
 
