fixed DEVEX-1196 and DEVEX-1159

--- a/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/components/currency-pair-info/currency-pair-info.component.html
@@ -23,6 +23,7 @@
       [options]="DIOptions"
       (onChange)="onChangeCurrPair($event)"
       (onSelect)="onSelectPair($event.text)"
+      (onBlur)="onBlurInput()"
     ></app-dynamic-input-dashboard>
     <div class="currency-pair-info__info" style="min-width: 180px;"
          [ngClass]="{'currency-pair-info__info--up': flarForArrow('up'),
