task 806(add end-point),906,1186,1192,1198,1200,1221

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -229,7 +229,9 @@
   </div>
 
   <div *ngIf="isOpenAlreadyRegisteredPopup">
-    <app-already-registered-popup></app-already-registered-popup>
+    <app-already-registered-popup
+    [message]="popupMessageId"
+    ></app-already-registered-popup>
   </div>
 
   <div *ngIf="isAlreadyRestoredPasswordPopupOpen">
