--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -59,7 +59,7 @@
         LOC
       </button>
       <button class="tabs__item tabs__item--small"
-              [ngClass]="{'tabs__item--active': currencyDisplayMode === 'Favorites','tab-no-active': currencyDisplayMode !== 'Favorites'}"
+              [ngClass]="{'tabs__item--active': currencyDisplayMode === 'FAVORITES','tab-no-active': currencyDisplayMode !== 'FAVORITES'}"
               (click)="selectedTab('FAVORITES')"
       >
         <span>
