--- a/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
+++ b/src/app/popups/registration-mobile-popup/registration-mobile-popup.component.html
@@ -200,7 +200,7 @@
             <path d="M3.42383 7.38525L6.16746 9.89641L15.4752 1" stroke="#BFBFBF" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </span>{{'By registering you agree with' | translate}}</div>
-        <a class="popup__link" (click)="goToTerms()">{{'Terms and conditions' | translate}}</a>
+        <a class="popup__link" [routerLink]="'/static/terms-and-conditions'" target="_blank">{{'Terms and conditions' | translate}}</a>
       </div>
       <div class="popup__links-wrap popup__links-wrap--hidden-mob">
         <span>{{'Already have an account?' | translate}}</span>
