--- a/src/app/popups/two-factor-popup/google/google-disable/google-disable.component.html
+++ b/src/app/popups/two-factor-popup/google/google-disable/google-disable.component.html
@@ -32,13 +32,13 @@
         class="wrap-input__input"
         type="text"
         formControlName="pincode">
-      <label class="wrap-input__label">{{'Pin code' | translate}}</label>
+      <label class="wrap-input__label">{{'Authenticator code' | translate}}</label>
       <div class="wrap-input__line"></div>
       <div *ngIf="form.get('pincode').touched && form.get('pincode').errors != null">
         <span
           *ngIf="form.get('pincode').errors['required']"
           class="wrap-input__message">
-          {{'This field is required.' | translate}}
+          {{'Authenticator code is required.' | translate}}
         </span>
       </div>
       <!-- <span style="display: inline-block; margin-top: 4px;">{{'Check pin-code in your email' | translate}}</span> -->
