--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -229,9 +229,13 @@
   </div>
 
   <div *ngIf="isOpenAlreadyRegisteredPopup">
-    <app-already-registered-popup
-    [message]="popupMessageId"
-    ></app-already-registered-popup>
+    <app-already-registered-popup></app-already-registered-popup>
+  </div>
+
+  <div *ngIf="isOpenInfoPopup">
+    <app-popup-info
+    [popupData]="popupData"
+    ></app-popup-info>
   </div>
 
   <div *ngIf="isAlreadyRestoredPasswordPopupOpen">
