--- a/src/app/dashboard/components/graph/graph.component.scss
+++ b/src/app/dashboard/components/graph/graph.component.scss
@@ -5,7 +5,7 @@
   max-height: 64px;
 }
 .dropdown__btn{
-  padding-right: 0;
+  // padding-right: 0;
   &:after{
     display: none;
   }
@@ -51,3 +51,16 @@
   }
 }
 
+.dropdown__btn{
+&:after {
+    position: absolute;
+    top: 40%;
+    right: 0;
+    display: inline-block;
+    content: "";
+    vertical-align: middle;
+    border-top: 4px solid #fff;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+}
+}
