--- a/src/app/dashboard/components/market-search/market-search.component.html
+++ b/src/app/dashboard/components/market-search/market-search.component.html
@@ -27,7 +27,7 @@
 
         <ng-container *ngFor="let pair of showPairs">
           <tr class="table__row table__row--mob " (click)="setCurrentPair(pair)">
-            <td class="table__cell table__cell--tac" style="width: 30px;">
+            <td class="table__cell">
           <span
             class="table__row-star"
             [ngClass]="{'table__row-star--select': isFavorite(pair)}"
@@ -38,7 +38,7 @@
           </svg>
           </span>
             </td>
-            <td class="table__cell table__cell--tac" style="width: 30px;" *ngIf="false">
+            <td class="table__cell" *ngIf="false">
           <span class="table__row-star">
           <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
           <path
