--- a/src/app/dashboard/components/market-search/market-search.component.scss
+++ b/src/app/dashboard/components/market-search/market-search.component.scss
@@ -19,8 +19,14 @@
 perfect-scrollbar{
   height: calc(100vh - 154px);
   position: relative;
-  padding-right: 10px;
+  // padding-right: 10px;
   ::ng-deep.ps__rail-y {
     margin-right: 0 !important;
   }
+}
+.widget__table .table__cell {
+    padding: 2px 1px;
+}
+.table__row-star svg{
+      fill: #4A5D88;
 }
