--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -28,12 +28,15 @@
           >
             {{'Password field is required.' | translate}}
           </span> -->
-          <span
+          <div class="input-hint-wrapper">
+            <span
             class="wrap-input__message"
             *ngIf="currentPassword.errors['wrong_password']"
           >
             {{'Wrong password.' | translate}}
           </span>
+          </div>
+          
           <!-- <span
             class="wrap-input__message"
             *ngIf="currentPassword.errors['passwordValidation'] ||
@@ -75,7 +78,8 @@
           >
             {{'Password field is required.' | translate}}
           </span> -->
-          <span
+          <div class="input-hint-wrapper">
+            <span
             class="wrap-input__message"
             *ngIf="firstPassword.errors['passwordValidation'] ||
                   firstPassword.errors['minlength'] ||
@@ -85,6 +89,8 @@
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
           </span>
+          </div>
+          
         </ng-container>
 
         <!--Input error section ends-->
@@ -122,12 +128,15 @@
           >
             {{'Password field is required.' | translate}}
           </span> -->
-          <span
+          <div class="input-hint-wrapper">
+            <span
             class="wrap-input__message"
             *ngIf="secondPassword.errors['passwordsNotMatch'] "
           >
             {{'Passwords you provided do not match' | translate}}
           </span>
+          </div>
+          
         </ng-container>
         <!--Input error section ends-->
       </div>
