--- a/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
+++ b/src/app/settings/two-factor-authenticaton/two-factor-authentication.component.html
@@ -4,19 +4,19 @@
     <div class="subtitle settings__content-subtitle"> {{'Log in, Withdrawal, Inner transfer' | translate}}</div>
   </div>
   <table class="table tfa__table">
-    <thead>
+    <!-- <thead>
     <tr>
       <th class="table__cell-head" style="width:300px"></th>
       <th class="table__cell-head" style="width:200px"><span>{{'By Google' | translate}}</span></th>
     </tr>
-    </thead>
+    </thead> -->
     <tr>
       <td class="table__cell"><span class="tfa__method">{{'Log in, Withdrawal, Inner transfer' | translate}}</span></td>
       <td class="table__cell" style="text-align:center">
-        <label class="toggler settings__toggler">
-          <input type="checkbox"  [checked]="GAEnabled$ | async">
-          <span class="toggler__indicate"></span>
-        </label>
+        <!-- <label class="toggler settings__toggler"> -->
+          <!-- <input type="checkbox"  [checked]="GAEnabled$ | async"> -->
+          <!-- <span class="toggler__indicate"></span> -->
+        <!-- </label> -->
       </td>
     </tr>
   </table>
