--- a/src/assets/scss/components/_service-style.scss
+++ b/src/assets/scss/components/_service-style.scss
@@ -1,3 +1,18 @@
 .d-none{
 	display: none;
 }
+
+.destop-content{
+	@media(max-width: 992px){
+		display: none;
+	}
+}
+
+.mobile-container{
+	@media(max-width: 992px){
+		max-width: 320px;
+		margin-left: auto;
+		margin-right: auto;
+		width: 100%;
+	}
+}	
